make sure graph bars are aligned vertically

--- a/src/index.css
+++ b/src/index.css
@@ -538,6 +538,10 @@ h1 {
   align-self: center;
 }
 
+.guess {
+  width: 1em;
+}
+
 
 /*
 ***************************************************************
